🐛 Fix resume list on mobile

--- a/styles/views/_resume.scss
+++ b/styles/views/_resume.scss
@@ -68,7 +68,7 @@
                 position: relative;
                 margin-right: 50px;
 
-                @media only screen and (max-width:400px) {
+                @media only screen and (max-width:500px) {
                     margin-right: 0;
                     margin-left: 30px;
 
